logs/rqworker.log.2017-09-10_16
16:19:57 Sent heartbeat to prevent worker timeout. Next one should arrive within 420 seconds.
16:20:48 high: script_on_saltmaster.parse_salt_event({'tag': 'key', 'data': {'_stamp': '2017-09-10T08:20:48.307069', 'rotate_aes_key': True}}) (9b952f5e-44ec-465e-894c-1ebf3f5b1b51)
16:20:48 Sent heartbeat to prevent worker timeout. Next one should arrive within 420 seconds.
16:20:48 Sent heartbeat to prevent worker timeout. Next one should arrive within 420 seconds.
16:20:48   File "/root/xbox/script_on_saltmaster.py", line 94
    else:
       ^
IndentationError: expected an indented block
Traceback (most recent call last):
  File "/usr/lib/python2.7/site-packages/rq/worker.py", line 713, in perform_job
    rv = job.perform()
  File "/usr/lib/python2.7/site-packages/rq/job.py", line 556, in perform
    self._result = self._execute()
  File "/usr/lib/python2.7/site-packages/rq/job.py", line 562, in _execute
    return self.func(*self.args, **self.kwargs)
  File "/usr/lib/python2.7/site-packages/rq/job.py", line 205, in func
    return import_attribute(self.func_name)
  File "/usr/lib/python2.7/site-packages/rq/utils.py", line 152, in import_attribute
    module = importlib.import_module(module_name)
  File "/usr/lib64/python2.7/importlib/__init__.py", line 37, in import_module
    __import__(name)
  File "/root/xbox/script_on_saltmaster.py", line 94
    else:
       ^
IndentationError: expected an indented block
Traceback (most recent call last):
  File "/usr/lib/python2.7/site-packages/rq/worker.py", line 713, in perform_job
    rv = job.perform()
  File "/usr/lib/python2.7/site-packages/rq/job.py", line 556, in perform
    self._result = self._execute()
  File "/usr/lib/python2.7/site-packages/rq/job.py", line 562, in _execute
    return self.func(*self.args, **self.kwargs)
  File "/usr/lib/python2.7/site-packages/rq/job.py", line 205, in func
    return import_attribute(self.func_name)
  File "/usr/lib/python2.7/site-packages/rq/utils.py", line 152, in import_attribute
    module = importlib.import_module(module_name)
  File "/usr/lib64/python2.7/importlib/__init__.py", line 37, in import_module
    __import__(name)
  File "/root/xbox/script_on_saltmaster.py", line 94
    else:
       ^
IndentationError: expected an indented block
16:20:48 Invoking exception handler <bound method Worker.move_to_failed_queue of <rq.worker.Worker object at 0x2e028d0>>
16:20:48 Moving job to u'failed' queue
16:20:48 Sent heartbeat to prevent worker timeout. Next one should arrive within 420 seconds.
16:20:48 Cleaning registries for queue: high
16:20:48 Cleaning registries for queue: default
16:20:48 Cleaning registries for queue: low
16:20:48 
16:20:48 *** Listening on high, default, low...
16:20:48 Sent heartbeat to prevent worker timeout. Next one should arrive within 420 seconds.
16:26:48 Sent heartbeat to prevent worker timeout. Next one should arrive within 420 seconds.
16:32:48 Sent heartbeat to prevent worker timeout. Next one should arrive within 420 seconds.
16:38:48 Sent heartbeat to prevent worker timeout. Next one should arrive within 420 seconds.
16:44:48 Sent heartbeat to prevent worker timeout. Next one should arrive within 420 seconds.
16:50:48 Sent heartbeat to prevent worker timeout. Next one should arrive within 420 seconds.
16:56:48 Sent heartbeat to prevent worker timeout. Next one should arrive within 420 seconds.
17:02:48 Sent heartbeat to prevent worker timeout. Next one should arrive within 420 seconds.
17:08:48 Sent heartbeat to prevent worker timeout. Next one should arrive within 420 seconds.
17:14:48 Sent heartbeat to prevent worker timeout. Next one should arrive within 420 seconds.
